# fastapi-blogApplication

./: .dockerignore  .gitignore  API_USAGE.md  DOCKER_QUICKSTART.md  Dockerfile  QUICKSTART.md  README.md  README_DEPLOYMENT.md  TESTING.md  docker-compose.production.yml  docker-compose.yml  nginx-docker.conf  nginx-production.conf  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  wait_for_db.py
alembic/: README  env.py
app/: __init__.py  config.py  database.py  logging_config.py  main.py
app/auth/: __init__.py  dependencies.py  rbac.py  role_routes.py  routes.py  schemas.py  utils.py
app/blogs/: __init__.py  chat_manager.py  routes.py  schemas.py  service.py  websocket.py
app/feature_requests/: __init__.py  routes.py  schemas.py
app/middleware/: __init__.py  audit.py  rate_limit.py  security.py
app/models/: __init__.py  blog.py  comment.py  feature_request.py  session.py  user.py
app/notifications/: __init__.py  manager.py  routes.py
app/session/: __init__.py  routes.py  schemas.py  service.py
config/: __init__.py
docs/: API.md  BROWSER_SSL_WARNING.md  DEPLOYMENT.md  HTTPS_DOCKER.md  MANUAL_STEPS.md  RUNNING.md  SECURITY.md  SSE_TESTING.md  SSL_CERTIFICATE_GUIDE.md  SSL_SETUP.md  TESTING.md  USERS.md  WEBSOCKET_TESTING.md
scripts/: deploy-production.sh  list_users.py  seed_users.py  setup-ssl-docker.sh
ssl/: README.md  server.crt  server.key
tests/: __init__.py  conftest.py  test_auth.py  test_blogs.py  test_sse.py  test_websocket.py
